force-app/main/default/objects/Apttus__DocumentImportLog__c/Apttus__DocumentImportLog__c.object-meta.xml
<CustomObject>
    <description>Document Import Log</description>
    <label>Document Import Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Document Import Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocumentImportLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>