force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agreement of the Imported Document</description>
    <inlineHelpText>Agreement of the Imported Document</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Document Import Logs</relationshipLabel>
    <relationshipName>DocumentImportLogs</relationshipName>
    <type>Lookup</type>
</CustomField>