force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__DocumentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentId__c</fullName>
    <description>Document Id of the Imported Document</description>
    <inlineHelpText>Document Id of the Imported Document</inlineHelpText>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>