force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__DocumentName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentName__c</fullName>
    <description>Document Name of the Imported Document</description>
    <inlineHelpText>Document Name of the Imported Document</inlineHelpText>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>