force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ErrorLog__c</fullName>
    <description>Error Info while saving the field/clause to Agreement</description>
    <inlineHelpText>Error Info while saving the field/clause to Agreement</inlineHelpText>
    <label>Error Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>