force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__ExtractedData__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ExtractedData__c</fullName>
    <description>Extracted Result from AI Provider for the Imported Document</description>
    <inlineHelpText>Extracted Result from AI Provider for the Imported Document</inlineHelpText>
    <label>Extracted Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>