force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__MappedFieldClauseName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MappedFieldClauseName__c</fullName>
    <description>Mapped Field/Clause for the Provision</description>
    <inlineHelpText>Mapped Field/Clause for the Provision</inlineHelpText>
    <label>Mapped Field/Clause Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>