force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__ProvisionName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ProvisionName__c</fullName>
    <description>Mapped Provision for the Field/Clause</description>
    <inlineHelpText>Mapped Provision for the Field/Clause</inlineHelpText>
    <label>Provision Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>