force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__ProvisionType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ProvisionType__c</fullName>
    <description>Mapped Provision Type</description>
    <inlineHelpText>Mapped Provision Type</inlineHelpText>
    <label>Provision Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Clause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>