force-app/main/default/objects/Apttus__DocumentImportLog__c/fields/Apttus__Resolution__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Resolution__c</fullName>
    <description>Resolution accepted for the Error</description>
    <inlineHelpText>Resolution accepted for the Error</inlineHelpText>
    <label>Resolution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>